Fix landing page on mobile

--- a/tgc-project-03/src/App.css
+++ b/tgc-project-03/src/App.css
@@ -143,10 +143,12 @@ body {
 }
 
 .landing-pic {
-  height: calc(100vh - 62px);
-  background-image: url("./assets/images/landing-page.png");
+  height: 100vh;
+  width: 100vw;
+  background-image: url("../src/assets/images/mobile-landing.png");
   background-position: center;
   background-size: cover;
+  object-fit: fill;
   transition: 3s;
 }
 
@@ -428,6 +430,15 @@ body {
     width: 200px;
   }
 
+  .landing-pic {
+    height: 100vh;
+    width: 100vw;
+    background-image: url("../src/assets/images/landing-page.png");
+    background-position: center;
+    background-size: cover;
+    object-fit: fill;
+  }
+
   #login-main-box {
     margin-top: 100px;
     background-image: linear-gradient(
@@ -508,7 +519,14 @@ body {
   .hero-btn {
     margin-left: 500px;
   }
-
+  .landing-pic {
+    height: 100vh;
+    width: 100vw;
+    background-image: url("../src/assets/images/landing-page.png");
+    background-position: center;
+    background-size: cover;
+    object-fit: fill;
+  }
   #login-main-box {
     width: 100%;
   }
@@ -557,7 +575,14 @@ body {
   .error-card {
     margin-left: 450px !important;
   }
-
+  .landing-pic {
+    height: 100vh;
+    width: 100vw;
+    background-image: url("../src/assets/images/landing-page.png");
+    background-position: center;
+    background-size: cover;
+    object-fit: fill;
+  }
   .d-btn-btn {
     margin-bottom: 20px !important;
     width: 250px !important;
@@ -598,10 +623,6 @@ body {
     font-size: 2rem !important;
     margin-left: 45vw;
     margin-top: 20vh;
-  }
-
-  .landing-pic {
-    width: 100vw;
   }
 
   #login-main-box {
@@ -650,7 +671,14 @@ body {
   .error-card {
     margin-left: 320px !important;
   }
-
+  .landing-pic {
+    height: 100vh;
+    width: 100vw;
+    background-image: url("../src/assets/images/landing-page.png");
+    background-position: center;
+    background-size: cover;
+    object-fit: fill;
+  }
   #register-container {
     margin-left: 620px;
     width: 320px;
